--- a/package.json
+++ b/package.json
@@ -15,16 +15,20 @@
     "@modelcontextprotocol/sdk": "^1.25.2",
     "@sap-cloud-sdk/connectivity": "^4.3.1",
     "@sap-cloud-sdk/http-client": "^4.3.1",
+    "@sap/xsenv": "^6.1.0",
+    "@sap/xssec": "^4.2.4",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "passport": "^0.7.0"
   },
   "devDependencies": {
     "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/node": "^25.0.6",
+    "@types/passport": "^1.0.17",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   },
