--- a/mta.yaml
+++ b/mta.yaml
@@ -20,8 +20,8 @@ modules:
     build-parameters:
       ignore: ["node_modules/"]
     parameters:
-      memory: 256M
-      disk-quota: 512M
+      memory: 1G
+      disk-quota: 2G
     requires:
       - name: mcp-uaa
       - name: mcp-destination
