--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@sap-cloud-sdk/connectivity": "^4.3.1",
     "@sap-cloud-sdk/http-client": "^4.3.1",
     "@sap/xsenv": "^6.1.0",
-    "@sap/xssec": "^4.2.4",
+    "@sap/xssec": "^4.12.2",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
@@ -27,8 +27,9 @@
     "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
-    "@types/node": "^25.0.6",
+    "@types/node": "^25.2.3",
     "@types/passport": "^1.0.17",
+    "@types/sap__xsenv": "^3.3.2",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   },
